[Glitch] Fix wrong width on logo in detailed link card in web UI
Port 889edc560ae94b0663bab0e4cdb7cbad7e3cc6f8 to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -11172,6 +11172,7 @@ noscript {
   gap: 8px;
 
   .logo {
+    width: 16px;
     height: 16px;
     color: $darker-text-color;
   }
